notes-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: nginx
spec:
  selector:
    app: notes-app
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
